added loans info to orders template

--- a/machiavelli/templates/machiavelli/orders_actions.html
+++ b/machiavelli/templates/machiavelli/orders_actions.html
@@ -40,6 +40,25 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 {% endfor %}
 </ul>
 
+{% if game.configuration.lenders and not player.defaulted %}
+
+<h2>{% trans "Loans" %}</h2>
+{% if loan %}
+<p>{% blocktrans with loan.debt as debt %}You owe {{ debt }} ducats to a banker.{% endblocktrans %}</p>
+<p>{% blocktrans with loan.get_season_display as season and loan.year as year %}Your debt must be paid before confirming your orders in the {{ season }} of {{ year }}.{% endblocktrans %}</p>
+<p>{% blocktrans %}If you don't repay your debt in the due term, you will be assassinated and, of course, you won't be able to borrow money anymore.{% endblocktrans %}</p>
+{% if not done %}
+<p><a href="{% url borrow-money game.slug %}">{% trans "Repay your loan" %}</a>.</p>
+{% endif %}
+{% else %}
+{% if not done %}
+<p>{% blocktrans %}You can borrow some money from a banker or financier. Depending on the term that you choose, you will have to pay an interest. If you can't or don't repay a loan, something very bad will happen to you and, of course, you won't be able to borrow money anymore.{% endblocktrans %}</p>
+<p><a href="{% url borrow-money game.slug %}">{% trans "Ask for a loan" %}</a>.</p>
+{% endif %}
+{% endif %}
+
+{% endif %}
+
 {% if game.configuration.finances %}
 <h2>{% trans "Expenses" %}</h2>
 {% if not done %}
