--- a/machiavelli/templates/machiavelli/game_list_active.html
+++ b/machiavelli/templates/machiavelli/game_list_active.html
@@ -45,6 +45,7 @@
 </dd>
 </dl>
 <ul class="section_menu">
+	<li>{% rule_icons game.configuration %}</li>
 	<li><a href="{% url show-game game.slug %}">{% trans "View game" %}</a></li>
 	<li><a href="{% url game-log game.slug %}">{% trans "Log" %}</a></li> 
 </ul>
