--- a/machiavelli/templates/machiavelli/game_list_finished.html
+++ b/machiavelli/templates/machiavelli/game_list_finished.html
@@ -38,7 +38,6 @@ Finished on {{ finished }} after {{ time }}.{% endblocktrans %}
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Cities to win" %}</dt><dd>{{ game.cities_to_win }}</dd>
-<dt>{% trans "Rules" %}</dt><dd>{% rule_icons game.configuration %}</dd>
 <dt>{% trans "Players" %}</dt>
 <dd>
 	<ul>
@@ -55,6 +54,7 @@ Finished on {{ finished }} after {{ time }}.{% endblocktrans %}
 </dd>
 </dl>
 <ul class="section_menu">
+	<li>{% rule_icons game.configuration %}</li>
 	<li><a href="{% url show-game game.slug %}">{% trans "View scores" %}</a></li>
 </ul>
 </div>
