--- a/machiavelli/templates/machiavelli/game_list_my_active.html
+++ b/machiavelli/templates/machiavelli/game_list_my_active.html
@@ -73,6 +73,7 @@
 </dd>
 </dl>
 <ul class="section_menu">
+	<li>{% rule_icons player.game.configuration %}</li>
 	<li><a href="{% url show-game player.game.slug %}">{% trans "View game" %}</a></li>
 	<li><a href="{% url game-log player.game.slug %}">{% trans "Log" %}</a></li> 
 	<li><a href="{% url condottieri_messages_inbox player.game.slug %}">{% trans "Inbox" %}</a></li>
