--- a/machiavelli/templates/machiavelli/game_list_pending.html
+++ b/machiavelli/templates/machiavelli/game_list_pending.html
@@ -44,7 +44,6 @@
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Cities to win" %}</dt><dd>{{ game.cities_to_win }}</dd>
 <dt>{% trans "Time limit" %}</dt><dd>{{ game.get_time_limit_display }}</dd>
-<dt>{% trans "Rules" %}</dt><dd>{% rule_icons game.configuration %}</dd>
 <dt>{% trans "Creator" %}</dt><dd>{{ game.created_by.username }}</dd>
 <dt>{% trans "Players" %}</dt>
 <dd>
@@ -62,6 +61,7 @@
 </dd>
 </dl>
 <ul class="section_menu">
+	<li>{% rule_icons game.configuration %}</li>
 	<li><a href="{% url show-game game.slug %}">{% trans "View game" %}</a></li>
 	{% if joinable %}
 	<li><a href="{% url join-game game.slug %}">{% trans "Join game" %}</a></li>
