show disabled areas in scenario detail

--- a/machiavelli/templates/machiavelli/scenario_detail.html
+++ b/machiavelli/templates/machiavelli/scenario_detail.html
@@ -58,4 +58,15 @@
 <td>{{ mayor_cities|join:", " }}</td>
 </tr>
 </table>
+
+<table>
+<thead>
+<tr>
+<th>{% trans "Disabled areas" %}</th>
+</tr>
+</thead>
+<tr>
+<td>{{ disabled_areas|join:", " }}</td>
+</tr>
+</table>
 {% endblock %}
