added css colors for Savoy and HRE

--- a/machiavelli/media/machiavelli/css/game.css
+++ b/machiavelli/media/machiavelli/css/game.css
@@ -122,6 +122,14 @@ tr.closed_game a{
 	background: #3d3dff;
 	color: black;
 }
+.hre {
+	background: #ffdd11;
+	color: black;
+}
+.savoy {
+	background: #bbffdd;
+	color: black;
+}
 
 .france a,
 .france a:visited,
