changed some notification templates and show new notices in summary template

--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -110,3 +110,14 @@
 
 
 {% endblock %}
+
+{% block right_column_extra %}
+{% if new_notices %}
+<div id="new_notices">
+<h2>{% trans "New notices" %}</h2>
+<ul>
+{{ new_notices|unordered_list }}
+</ul>
+</div>
+{% endif %}
+{% endblock %}
