--- a/machiavelli/templates/notification/game_over/notice.html
+++ b/machiavelli/templates/notification/game_over/notice.html
@@ -1,4 +1,3 @@
 {% load i18n %}
 
-{% blocktrans with game.slug as slug %}The game '{{ slug }}' has is over. You can {% endblocktrans %}
-<a href="{% url show-game game.slug %}">{% trans "see the results" %}</a>.
+{% blocktrans with game.slug as slug %}'{{ slug }}' is over.{% endblocktrans %}
