--- a/machiavelli/templates/machiavelli/base.html
+++ b/machiavelli/templates/machiavelli/base.html
@@ -49,6 +49,8 @@
 <div style="text-align: center">
 <a href="http://www.twitter.com/condottierigame"><img src="http://twitter-badges.s3.amazonaws.com/twitter-a.png" alt="Follow condottierigame on Twitter"/></a>
 </div>
+
+{% block right_column_extra %}{% endblock %}
 </div>
 {% endblock %}
 
