--- a/machiavelli/templates/notification/game_started/notice.html
+++ b/machiavelli/templates/notification/game_started/notice.html
@@ -1,4 +1,3 @@
 {% load i18n %}
 
-{% blocktrans with game.slug as slug %}The game '{{ slug }}' has just started. You can {% endblocktrans %}
-<a href="{% url show-game game.slug %}">{% trans "play it now" %}</a>.
+{% blocktrans with game.slug as slug %}'{{ slug }}' has just started.{% endblocktrans %}
