--- a/machiavelli/templates/notification/got_player/notice.html
+++ b/machiavelli/templates/notification/got_player/notice.html
@@ -1,5 +1,4 @@
 {% load i18n %}
 
-<p>{% blocktrans with game.slug as slug %}You are now playing the game '{{ slug }}'.{% endblocktrans %}</p>
+{% blocktrans with game.slug as slug %}You are now playing in '{{ slug }}'.{% endblocktrans %}
 
-<p><a href="{% url show-game game.slug %}">{% trans "Go to the game" %}</a></p>
