--- a/condottieri_help/templates/condottieri_help/index.html
+++ b/condottieri_help/templates/condottieri_help/index.html
@@ -43,6 +43,10 @@
 <li>{% trans "Famine" %}</li>
 <li>{% trans "Plague" %}</li>
 </ul>
+<h3>{% trans "Fast games" %}</h3>
+<p>{% blocktrans %}Fast games have a much shorter time limit for playing each turn, and are meant to be finished in some hours. To create or join a fast game, you need to have a slightly high karma value, so you may not be able to play this kind of game if you are a new user.{% endblocktrans %}</p>
+<p>{% blocktrans %}Before creating a fast game, you should agree with other users a date and time when all these users can expend some hours to play the game. A fast game waits for new players only for 60 minutes. After this time, if there are not enough players to play the game, it will be deleted.{% endblocktrans %}</p>
+<p>{% blocktrans %}Fast games are played with the same rules that normal ones, and points are earned the same way. However, karma rules are not used in this games. You don't lose or earn karma, and all the players have the same time to play.{% endblocktrans %}</p>
 <h3>{% trans "Country assignation" %}</h3>
 <p>{% blocktrans %}Once the last player joins a game, all the countries in the scenario are randomly assigned.{% endblocktrans %}
 <h3>{% trans "The reinforcement phase" %}</h3>
