--- a/machiavelli/templates/machiavelli/finance_reinforcements_1.html
+++ b/machiavelli/templates/machiavelli/finance_reinforcements_1.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 
 {% block actions %}
+<div class="action_block">
 <h2>{% trans "Military Adjustment" %}</h2>
 <h3>{% trans "Military unit payment" %}</h3>
 {% if done %}
@@ -64,5 +65,5 @@ players have done it or the time limit is reached.{% endblocktrans %}</p>
 
 </form>
 {% endif %}
-
+</div>
 {% endblock %}
