--- a/machiavelli/templates/machiavelli/scenario_list.html
+++ b/machiavelli/templates/machiavelli/scenario_list.html
@@ -17,7 +17,7 @@
 <tr>
 <td><a href="{% url show-scenario s.pk %}">{% trans s.title %}</a></td>
 <td class="data_c">{{ s.start_year }}</td>
-<td class="data_c">{{ s.get_slots }}</td>
+<td class="data_c">{{ s.number_of_players }}</td>
 <td><a href="{% url ranking "scenario" s.name %}">{% trans "See scores" %}</a></td>
 </tr>
 {% endfor %}
