--- a/machiavelli/media/machiavelli/css/game.css
+++ b/machiavelli/media/machiavelli/css/game.css
@@ -269,8 +269,8 @@ tr.closed_game a{
 }
 
 #actions {
-	width: 100%;
-	margin-top: 2em;
+	width: 70%;
+	float: left;
 }
 
 #actions form fieldset {
@@ -337,4 +337,41 @@ tr.closed_game a{
 	margin: 2px 1em;
 	padding: 0.5em;
 	border: solid 1px #444;
+}
+
+#shoutbox {
+	width: 24%;
+	margin-left: 75%;
+	padding: 0 0 0.5em 0;
+	margin-top: 1em;
+	background-color: #4f4f4f;
+}
+
+#shoutbox h2 {
+	background: #9f2727;
+	padding: 0.2em 0.5em;
+}
+
+#shoutbox ul li {
+	list-style-type: none;
+	padding: 0.5em;
+}
+
+#shoutbox .date {
+	display: block;
+	font-size: smaller;
+	color: #ccc;
+}
+
+#shoutbox .admin {
+	background-color: #c14200;
+	font-style: italic;
+}
+
+#shoutbox form {
+	margin-left: 5%;
+}
+
+#shoutbox textarea {
+	width: 90%;
 }
