--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -154,6 +154,23 @@
 <div id="actions">
 {% block actions %}{% endblock %}
 </div>
+{% if whispers %}
+<div id="shoutbox">
+<h2>{% trans "Gossip" %}</h2>
+<ul>
+{% for w in whispers %}
+{{ w.as_li|safe }}
+{% endfor %}
+</ul>
+{% if player %}
+<form action="{% url new-whisper game.slug %}" method="POST">
+{% csrf_token %}
+{{ whisper_form.text }}
+<input type="submit" value="{% trans "Send" %}" />
+</form>
+{% endif %}
+</div>
+{% endif %}
 
 {% endblock %}
 
