--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -155,7 +155,7 @@
 {% block actions %}{% endblock %}
 </div>
 {% if whispers %}
-<div id="shoutbox">
+<div id="mini_shoutbox">
 <h2>{% trans "Gossip" %}</h2>
 <ul>
 {% for w in whispers %}
