--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -154,7 +154,7 @@
 <div id="actions">
 {% block actions %}{% endblock %}
 </div>
-{% if whispers %}
+{% if game.configuration.gossip %}
 <div id="mini_shoutbox">
 <h2>{% trans "Gossip" %}</h2>
 <ul>
@@ -169,6 +169,7 @@
 <input type="submit" value="{% trans "Send" %}" />
 </form>
 {% endif %}
+<p><a href="{% url whisper-list game.slug %}">{% trans "Show all" %}</a></p>
 </div>
 {% endif %}
 
