--- a/machiavelli/templates/machiavelli/orders_actions.html
+++ b/machiavelli/templates/machiavelli/orders_actions.html
@@ -40,6 +40,13 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 </li>
 {% endfor %}
 </ul>
+{% if undoable %}
+<p>{% blocktrans %}If you wish, you can change your orders. To do so, push the following button. Remember that you will need to confirm your actions again; otherwise all your ordes will be lost.{% endblocktrans %}</p>
+<form method="POST" action="{% url undo-actions game.slug %}">
+{% csrf_token %}
+<p><input type="submit" value="{% trans "Change orders" %}" /></p>
+</form>
+{% endif %}
 </div>
 
 {% if game.configuration.lenders and not player.defaulted %}
