fixed bug that raised an exception when an anonymous user tried to render the whisper form

--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -162,7 +162,7 @@
 {{ w.as_li|safe }}
 {% endfor %}
 </ul>
-{% if player %}
+{% if whisper_form %}
 <form action="{% url new-whisper game.slug %}" method="POST">
 {% csrf_token %}
 {{ whisper_form.text }}
