--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -19,6 +19,7 @@
 {% block body %}
 <div id="game_info">
 <ul>
+<li id="cities_to_win">{{ game.cities_to_win }}</li>
 <li>{{ game.slug }}</li>
 <li>{{ game.year|default_if_none:"" }} |
 {{ game.get_season_display|default_if_none:"" }} |
