--- a/machiavelli/templates/machiavelli/log_list.html
+++ b/machiavelli/templates/machiavelli/log_list.html
@@ -19,15 +19,15 @@
 <div class="pagination">
 	<span class="step-links">
 		{% if log.has_previous %}
-			<a href="?page={{ log.previous_page_number }}">&lt;&lt;</a>
+			<a href="?{{ log.previous_date }}">&lt;&lt;</a>
 		{% endif %}
 		
 		<span class="current">
-			{% trans "Page" %} {{ log.number }} {% trans "of" %} {{ log.paginator.num_pages }}.
+			{{ log.year }}, {{ log.season_name }}
 		</span>
 
 		{% if log.has_next %}
-			<a href="?page={{ log.next_page_number }}">&gt;&gt;</a>
+			<a href="?{{ log.next_date }}">&gt;&gt;</a>
 		{% endif %}
 	</span>
 </div>
