--- a/machiavelli/templates/machiavelli/expenses_actions.html
+++ b/machiavelli/templates/machiavelli/expenses_actions.html
@@ -33,23 +33,23 @@
 <td>{% trans "Counter bribe" %}</td><td>3+</td><td>{% trans "No" %}</td>
 </tr>
 <tr>
-<td>{% trans "Disband autonomous garrison" %}</td><td>6+</td><td>{% trans "Yes" %}</td>
+<td>{% trans "Disband autonomous garrison" %}</td><td>6+*</td><td>{% trans "Yes" %}</td>
 </tr>
 <tr>
-<td>{% trans "Buy autonomous garrison" %}</td><td>9+</td><td>{% trans "Yes" %}</td>
+<td>{% trans "Buy autonomous garrison" %}</td><td>9+&dagger;</td><td>{% trans "Yes" %}</td>
 </tr>
 <tr>
-<td>{% trans "Convert garrison unit" %}</td><td>9+</td><td>{% trans "Yes" %}</td>
+<td>{% trans "Convert garrison unit" %}</td><td>9+&dagger;</td><td>{% trans "Yes" %}</td>
 </tr>
 <tr>
-<td>{% trans "Disband enemy unit" %}</td><td>12+</td><td>{% trans "Yes" %}</td>
+<td>{% trans "Disband enemy unit" %}</td><td>12+&dagger;</td><td>{% trans "Yes" %}</td>
 </tr>
 <tr>
-<td>{% trans "Buy enemy unit" %}</td><td>18+</td><td>{% trans "Yes" %}</td>
+<td>{% trans "Buy enemy unit" %}</td><td>18+&dagger;</td><td>{% trans "Yes" %}</td>
 </tr>
 </tbody>
 </table>
-
+<p>&dagger; {% blocktrans %}The minimum cost of these bribes is doubled if the bribed unit is a garrison in a major city (the ones with a number inside the circle).{% endblocktrans %}</p>
 {% if form %}
 <h3>{% trans "New expense" %}</h3>
 <div class="action_form">
