--- a/machiavelli/templates/machiavelli/game_list_pending.html
+++ b/machiavelli/templates/machiavelli/game_list_pending.html
@@ -63,6 +63,10 @@
 	{% trans "Players are not visible" %}
 	{% endif %}
 </dd>
+{% if game.private %}
+<dt>{% trans "Invited users" %}</dt>
+<dd>{{ game.invitation_set.all|join:", " }}</dd>
+{% endif %}
 </dl>
 <ul class="section_menu">
 	<li>{% rule_icons game.configuration %}</li>
