--- a/machiavelli/media/machiavelli/css/game.css
+++ b/machiavelli/media/machiavelli/css/game.css
@@ -204,7 +204,7 @@ tr.closed_game a{
 	border-top: solid 1px #111;
 }
 
-#log li {
+#log ul li {
 	list-style-type: none;
 	min-height: 28px;
 	margin-left: 0;
