--- a/machiavelli/templates/machiavelli/game_list_pending.html
+++ b/machiavelli/templates/machiavelli/game_list_pending.html
@@ -73,6 +73,7 @@
 	{% if game.private %}
 		{% ifequal game.created_by user %}
 			<li><a href="{% url invite-users game.slug %}">{% trans "Invitations" %}</a></li>
+			<li><a href="{% url make-public game.slug %}">{% trans "Make public" %}</a></li>
 		{% endifequal %}
 	{% endif %}
 	<li><a href="{% url show-game game.slug %}">{% trans "View game" %}</a></li>
