--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -66,7 +66,7 @@
 	<li><a href="{% url join-game joinable_game.slug %}">{% trans "Join game" %}</a></li>
 	</ul>
 {% if joinable_game.comment %}
-	<li>{{ game.comment }}</li>
+	<li>{{ joinable_game.comment }}</li>
 {% endif %}
 </ul>
 </div>
