--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -128,7 +128,7 @@
 {% for w in whispers %}
 <li>{{ w.text|escape }}
 <a href="{% url show-game w.game.slug %}"><img src="{{ STATIC_URL }}machiavelli/img/link.png" alt="Go" /></a>
-<span class="date">{{ w.created_at|timesince }}</span></li>
+<span class="date">{{ w.created_at|timesince }}, {{ w.game.slug }}</span></li>
 {% endfor %}
 </ul>
 </div>
